# mmaiv2

./: .gitignore  CLAUDE.md  FRONTEND_CONTEXT.md  GEMINI.md  INTENT.md  STATE.md  ecosystem.config.js  package-lock.json  package.json
backend/: CLAUDE.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 557bf2b55512_add_deleted_at_to_training_sessions.py  a68450dd7890_create_users_table.py  c1580fd35229_add_core_domains_and_gamification.py  f8ce5b717d51_add_performance_events_and_user_.py  ff35c8454d97_add_usage_records.py
backend/app/: main.py
backend/app/core/: config.py  database.py  deps.py  exception_handlers.py  exceptions.py  otp.py  security.py
backend/app/models/: __init__.py  achievement.py  base.py  conversation.py  journal.py  memory.py  note.py  profile.py  streak.py  usage.py  user.py
backend/app/prompts/: coach.py  memory_extraction.py
backend/app/routes/: auth.py  conversation.py  health.py  journal.py  memory.py  note.py  profile.py  recovery.py  stats.py
backend/app/schemas/: __init__.py  auth.py  conversation.py  health.py  journal.py  memory.py  note.py  profile.py  recovery.py  stats.py
backend/app/services/: auth.py  conversation.py  email.py  extraction.py  grok.py  memory.py  (+7 more)
backend/tests/: conftest.py  test_auth.py  test_conversation.py  test_email_verification.py  test_health.py  test_journal.py  test_memory_context.py  test_memory_extraction.py  test_memory_routes.py  test_memory_schemas.py  test_memory_service.py  test_notes.py  test_profile.py  test_recovery.py  test_stats.py  test_streak.py  test_usage.py
(+112 files in other folders)
